src/App.css
html,
body {
  height: 100%;
  min-height: 100%;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: 'Segoe UI', sans-serif;
  background: linear-gradient(#ffa500, #e0e0e0, #ffa500);
}

.calculator {
  max-width: 320px;
}

.calculator_screen {
  padding: 15px;
  font-size: 4.5em;
  text-align: right;
  background-color: #808080;
  color: #fff;
}

.calculator_UI {
  display: flex;
  flex-wrap: wrap;
}

button {
  font-family: 'Segoe UI', sans-serif;
  flex: 0 1 25%;
  height: 70px;
  color: #111;
  font-size: 2em;
  background: #e0e0e0;
  border: 1px solid #808080;
  cursor: pointer;
}

.btn_opaque {
  background-color: #ffa500;
  color: #000;
}

.btn_large {
  flex: 0 1 50%;
}

